@@ -774,6 +774,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4493. Distibuted Cache Compatability Issues (Robert Evans
     via tgraves)
 
+    MAPREDUCE-4492. Configuring total queue capacity between 100.5 and 99.5 at
+    perticular level is sucessfull (Mayank Bansal via bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
